--- a/src/sass/pages/_about.scss
+++ b/src/sass/pages/_about.scss
@@ -1,5 +1,5 @@
 .about {
-  min-height: 93vh;
+  min-height: 95vh;
   width: 100vw;
   color: $color-white;
   overflow: hidden;
